# cloud-data

./: .gitignore  README.md  _cloud-data-consolidated.json  _config.yml  alias.sh  build-authelia-redis.json  build-authelia.json  build-borg-server.json  build-bup-server.json  build-c3-diego-personal-data-mcp.json  build-c3-infra-api.json  build-c3-infra-mcp.json  build-c3-services-api.json  build-c3-services-mcp.json  build-caddy-l4-image.json  build-caddy.json  build-cloud-builder-x.json  build-cloud-cgc-mcp.json  build-cloud-spec.json  build-cloudflare-worker.json  build-code-server.json  build-crawlee_api.json  build-crawlee_dashboard.json  build-crawlee_db.json  build-crawlee_minio.json  build-crawlee_redis.json  build-crawlee_runner.json  build-crawlee_scheduler.json  build-dagu.json  build-db-agent.json  build-dbgate.json  build-dozzle.json  build-etherpad_app.json  build-etherpad_postgres.json  build-filebrowser_app.json  build-fincept-server.json  build-fluent-bit.json  build-gcloud.json  build-gitea.json  build-github-rss.json  (+103 more)
cloud-health-stack/cloud-mail-full-report/: Cargo.toml  build.sh  cloud_mail_full.json  cloud_mail_full.md
cloud-health-stack/cloud-mail-full-report/src/: constants.rs  main.rs  output.rs  phases.rs  ssh.rs  types.rs
cloud-health-stack/cloud-stack-report/: Cargo.toml  container_health.md  container_health_rust.json
cloud-health-stack/cloud-stack-report/cache/gcp-proxy/: latest.json
cloud-health-stack/cloud-stack-report/cache/oci-apps/: latest.json
cloud-health-stack/cloud-stack-report/src/: checks.rs  collectors.rs  parsers.rs
reports/: Cargo.toml  Dockerfile  build-deps.json  build-reports.json  build.sh  cloud_sec_data.md  cloud_sec_network.md  cloud_url_health.md  docker-compose.yml  entrypoint.sh  manifest.json
reports/cloud-health-daily-mail/: Cargo.toml  build.sh
reports/cloud-health-daily-mail/src/: collect.rs  context.rs  diagrams.rs  html.rs  main.rs  mermaid.rs  send.sh  ssh.rs  types.rs
reports/cloud-health-full-report/: build.sh  cloud_health_full.json  cloud_health_full.md
reports/cloud-health-full-report/cache/gcp-proxy/: latest.json
reports/cloud-health-full-report/cache/oci-analytics/: latest.json
reports/cloud-health-full-report/cache/oci-apps/: latest.json
reports/cloud-health-full-report/cache/oci-mail/: latest.json
reports/cloud-health-full-report/src/: checks.rs  context.rs  layers.rs  main.rs  types.rs
reports/cloud-mail-full-report/: Cargo.toml  build.sh  cloud_mail_full.json  cloud_mail_full.md
reports/cloud-mail-full-report/src/: constants.rs  output.rs  phases.rs  ssh.rs  template.rs  types.rs
reports/cloud-sec-data-report/: Cargo.toml  build.sh  cloud_sec_data.json  cloud_sec_data.md  cloud_sec_data.md.tpl
reports/cloud-sec-data-report/src/: context.rs  correlate.rs  export.rs  main.rs  output.rs  siem.rs  threat_intel.rs  types.rs  yara_scan.rs
reports/cloud-sec-data-report/yara-rules/custom/: cryptominers.yar  suspicious.yar
reports/cloud-sec-data-report/yara-rules/infra/: credential_leak.yar
reports/cloud-sec-network-report/: Cargo.toml  build.sh  cloud_sec_network.json  cloud_sec_network.md
reports/cloud-sec-network-report/src/: context.rs  dns_audit.rs  main.rs  port_scan.rs  tls_audit.rs  types.rs  wireguard.rs
reports/cloud-stack-report/: Cargo.toml  build.sh  container_health.md  container_health.md.tpl  container_health_rust.json
reports/cloud-stack-report/cache/gcp-proxy/: latest.json
reports/cloud-stack-report/cache/oci-apps/: latest.json
reports/cloud-stack-report/cache/oci-mail/: latest.json
reports/cloud-stack-report/src/: checks.rs  collectors.rs  parsers.rs  sections.rs  types.rs
reports/cloud-url-health-report/: Cargo.toml  build.sh  cloud_url_health.json  cloud_url_health.md  cloud_url_health.md.tpl
reports/cloud-url-health-report/src/: main.rs  probes.rs  template.rs
reports/reports-common/src/: capabilities.rs  context.rs  lib.rs  output.rs  template.rs  types.rs
reports/src/: Cargo.toml  _crate_engine.sh  build.sh
reports/src/cloud-health-full-2/: Cargo.toml  build.sh
reports/src/cloud-health-full-2/cache/gcp-proxy/: latest.json
reports/src/cloud-health-full-2/cache/oci-analytics/: latest.json
reports/src/cloud-health-full-2/cache/oci-apps/: latest.json
reports/src/cloud-health-full-2/cache/oci-mail/: latest.json
reports/src/cloud-health-full-2/src/: context.rs  layers.rs  main.rs  ssh.rs  template.rs
reports/src/cloud-health-full-2/src/stack/: collectors.rs  mod.rs  parsers.rs  template.rs
reports/src/cloud-health-full-2/stack-cache/oci-analytics/: latest.json
reports/src/cloud-health-full-daily/: Cargo.toml  build.sh  cloud_health_daily.md.tpl  cloud_mail_full.md.tpl
reports/src/cloud-health-full-daily/src/: appendix.rs  collect.rs  context.rs  diagrams.rs  html.rs  mail.rs  main.rs  md.rs  send.sh  ssh.rs  types.rs
reports/src/cloud-health-full-daily/src/health_full2/: context.rs  layers.rs  (+4 more)
reports/src/cloud-mail-health-full/: Cargo.toml  build.sh
reports/src/cloud-mail-health-full/src/: checks.rs  main.rs  phases.rs  ssh.rs  template.rs
reports/src/cloud-sec-data-report/: Cargo.toml  build.sh  build.sh.new  cloud_sec_data.md.tpl
reports/src/cloud-sec-data-report/src/: context.rs  correlate.rs  diff_analysis.rs  export.rs  journal.rs  main.rs  output.rs  repo_scan.rs  runtime.rs  scan_config.rs  yara_scan.rs
reports/src/cloud-sec-network-report/: build.sh  build.sh.new  cloud_sec_network.md.tpl
reports/src/cloud-sec-network-report/src/: context.rs  dns_audit.rs  firewall.rs  output.rs  port_scan.rs  tls_audit.rs  types.rs
reports/src/cloud-url-health-report/: Cargo.toml  build.sh  cloud_url_health.md.tpl
reports/src/cloud-url-health-report/src/: config.rs  email_e2e.rs  main.rs  private_checks.rs  public_checks.rs  template.rs
reports/src/reports-common/: Cargo.toml
reports/src/reports-common/src/: caddy.rs  checks.rs  context.rs  email_e2e.rs  fleet.rs  lib.rs  perf.rs  probe.rs  ssh.rs  template.rs
reports/traces-gha/: gcp-proxy.json  gcp-t4.json  oci-analytics.json  oci-apps.json  oci-mail.json
(+278 files in other folders)
