[workspace]
members = [
  "reports-common",
  "cloud-stack-report",
  "cloud-health-full-report",
  "cloud-health-daily-mail",
  "cloud-mail-full-report",
  "cloud-url-health-report",
  "cloud-sec-network-report",
  "cloud-sec-data-report",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
