[package]
name = "cloud-mail-full"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trust-dns-resolver = "0.23"
chrono = "0.4"
anyhow = "1"
futures = "0.3"
md5 = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true
