[workspace]
members = [
  # MASTER — monster consolidated check
  "cloud-health-full-daily",
  # DERIVES — focused, produce their own outputs alongside the master
  "cloud-mail-health-full",
  "cloud-sec-data-report",
  "cloud-sec-network-report",
  "cloud-url-health-report",
  # SHARED
  "reports-common",
]
# Architecture (2026-04-23):
#   cloud-health-full-daily  = master. Absorbs cloud-health-full-2 + its stack
#                              sub-engine (now lives under src/health_full2/) AND
#                              runs the mail_full engine in-process (src/mail_full/)
#                              for its Z-appendix. Writes ONLY cloud_health_daily.*
#   cloud-mail-health-full   = derive. Same mail logic, standalone binary.
#                              Writes cloud_mail_full.{md,json}.
#   cloud-url-health-report  = derive. Fast E2E URL probe.
#   cloud-sec-data-report    = derive. Security data scan.
#   cloud-sec-network-report = derive. Security network scan.
resolver = "2"

[profile.release]
opt-level = 3
# lto = true was here. It forced a full re-link of all 5 binaries every time
# reports-common changed (~15 min on warm cache, ~3 min on warm cache after
# Step 1 of the perf plan). Disabled 2026-04-25 — incremental rebuild now
# completes in <30s for any reports-common change.
codegen-units = 16
strip = true
