[package]
name = "cloud-health-full-daily"
version = "0.1.0"
edition = "2021"

[dependencies]
reports-common = { path = "../reports-common" }
tokio = { version = "1", features = ["full"] }
# Superset of features used by daily + absorbed submodules (health_full2 + mail_full).
reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-webpki-roots", "json", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trust-dns-resolver = "0.23"
chrono = "0.4"
anyhow = "1"
futures = "0.3"
# Absorbed from cloud-mail-health-full
md5 = "0.7"
# Absorbed from cloud-health-full-2 (stack sub-engine: tera templates + russh SSH)
dirs = "5"
tera = "1"
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
