[package]
name = "cloud-sec-data"
version = "0.1.0"
edition = "2021"

[dependencies]
reports-common = { path = "../reports-common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
futures = "0.3"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
flate2 = "1"
