[package]
name = "cloud-url-health-report"
version = "0.1.0"
edition = "2021"

[dependencies]
reports-common = { path = "../reports-common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
futures = "0.3"
# Email E2E — all rustls-based to match the rest of the workspace (no openssl-sys).
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-rustls-tls", "builder"], default-features = false }
# Raw IMAP over rustls — avoids openssl-sys entirely (only a few IMAP verbs needed).
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
uuid = { version = "1", features = ["v4"] }
